# marietta

./: Cargo.toml  plan.md
crates/marietta/: Cargo.toml
crates/marietta-compiler/: Cargo.toml
crates/marietta-compiler/src/: actor.rs  ast.rs  codegen.rs  ir.rs  lib.rs  parser.rs  pipeline.rs  resolve.rs  types.rs
crates/marietta/src/: main.rs
examples/: channels.ma  counter_actor.ma  dyn_shape.ma  fib256.ma  hello.ma  matmul.ma
src/: actor.rs  ast.rs  async_transform.rs  ir.rs  lexer.rs  main.rs  parser.rs  types.rs
