[package]
name = "marietta"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
cranelift-codegen  = "0.131"
cranelift-frontend = "0.131"
cranelift-jit      = "0.131"
cranelift-object   = "0.131"
cranelift-module   = "0.131"
cranelift-native   = "0.131"
